# AstralReboot

./: .gitignore  .gitmessage.txt  __main__.py  pyproject.toml  readme.md  requirements.txt
assets/shaders/: chunk_opaque.vert
assets_src/shaders/: chunk_opaque.frag  debug.vert  overlay.frag  skybox.frag  skybox.vert
bootstrap/: ecs_bootstrap.py  game_bootstrap.py
components/: camera_matrices.py  model_matrix.py  player_controller.py  tags.py  transform.py  velocity.py
docs/architecture/: overview.md
ecs/: command_buffer.py  entity_allocator.py  event_bus.py  math_camera.py  query.py  resources.py  scheduler.py  soa_store.py  store_registry.py  system_spec.py  tag_store.py  world.py
renderer/: astralwindow.py  renderer.py  skybox.py
resources/: gravity_config.py  input_state.py  sky_settings.py
stores/: acceleration_store.py  camera_matrices_store.py  camera_store.py  chunk_store.py  mass_store.py  mesh_store.py  parent_follow_store.py  player_controller_store.py  transform_store.py  velocity_store.py
systems/: camera_system.py  chunk_draw_system.py  chunk_remesh_system.py  gravity_system.py  movement_system.py  parent_follow_system.py  player_controller_system.py  pre_render_system.py  render_system.py  skybox_render_system.py
tests/: README.md  conftest.py  test_application.py  test_command_buffer.py  test_dense_store.py  test_ecs_world.py  test_integration_runtime.py  test_query.py  test_scheduler.py  test_simulation_session.py  test_store_registry.py  test_system_spec.py  test_system_spec_validation.py  test_tag_store.py
voxels/: chunk_map.py
(+310 files in other folders)
