[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "astralengine"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config"
]

markers = [
    "unit",
    "integration",
    "slow",
    "ecs",
    "storage",
    "scheduler",
    "query",
    "command_buffer",
    "system",
    "world",
    "resource",
]